--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,5 +35,6 @@ jobs:
       working-directory: ./quarkus_be
 
     - name: Build with Maven
-      run: ./mvnw clean install -DskipTests
+      run: ./mvnw clean install
       working-directory: ./quarkus_be
+
