Dodal vse z Narocnino, CRUD

--- a/quarkus_be/src/main/resources/application.properties
+++ b/quarkus_be/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 # Default datasource configuration
 quarkus.datasource.db-kind=postgresql
+quarkus.hibernate-orm.database.generation=update
 quarkus.datasource.username=zimska
 quarkus.datasource.password=zimska
 quarkus.datasource.jdbc.url=jdbc:postgresql:localhost:5432/Basic
