--- a/quarkus_be/src/main/resources/application.properties
+++ b/quarkus_be/src/main/resources/application.properties
@@ -14,3 +14,8 @@ quarkus.datasource.jdbc.url=jdbc:postgresql:localhost:5432/Basic
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 %test.quarkus.datasource.username=username
 %test.quarkus.datasource.password=password
+
+quarkus.http.cors=true
+quarkus.http.cors.origins=*
+quarkus.http.cors.methods=GET,POST,PUT,DELETE
+quarkus.http.cors.headers=accept,authorization,content-type,x-requested-with
