--- a/quarkus_be/src/main/resources/application.properties
+++ b/quarkus_be/src/main/resources/application.properties
@@ -1,20 +1,26 @@
-# Default datasource configuration
-quarkus.datasource.db-kind=postgresql
-quarkus.hibernate-orm.database.generation=update
+# Default datasource configuration for H2
+quarkus.datasource.db-kind=h2
+quarkus.datasource.jdbc.url=jdbc:h2:file:./data/db;DB_CLOSE_DELAY=-1
 quarkus.datasource.username=zimska
 quarkus.datasource.password=zimska
-quarkus.datasource.jdbc.url=jdbc:postgresql:localhost:5432/Basic
 
+# Hibernate ORM settings
+quarkus.hibernate-orm.database.generation=update
+quarkus.hibernate-orm.log.sql=true
+
+# Development-specific configuration
 %dev.quarkus.datasource.db-kind=h2
 %dev.quarkus.datasource.jdbc.url=jdbc:h2:mem:devdb;DB_CLOSE_DELAY=-1
 %dev.quarkus.datasource.username=username
 %dev.quarkus.datasource.password=password
 
+# Test-specific configuration
 %test.quarkus.datasource.db-kind=h2
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1
 %test.quarkus.datasource.username=username
 %test.quarkus.datasource.password=password
 
+# CORS configuration
 quarkus.http.cors=true
 quarkus.http.cors.origins=*
 quarkus.http.cors.methods=GET,POST,PUT,DELETE
