--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,7 +45,7 @@ jobs:
       env:
         GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
         SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Vzupa_zimskaSola24
+      run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Vzupa_zimskaSola24 -Dsonar.qualitygate.wait=false
       working-directory: ./quarkus_be
 
     - name: Upload resulting Build package
@@ -53,3 +53,23 @@ jobs:
       with:
         name: Package
         path: quarkus_be/target/
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+    - name: Build and Push Backend Docker Image
+      run: |
+        ./mvnw package
+        docker build -f src/main/docker/Dockerfile.jvm -t vzupa/quarkus-be .
+        docker push vzupa/quarkus-be
+      working-directory: ./quarkus_be
+    
+    - name: Build and Push Frontend Docker Image
+      run: |
+        docker build -t vzupa/react-fe .
+        docker push vzupa/react-fe
+      working-directory: ./ZimskaSola24
+
