--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,11 @@ jobs:
         path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
-
+        
+    - name: Grant execute permission for mvnw
+      run: chmod +x mvnw
+      working-directory: ./quarkus_be
+      
     - name: Build with Maven and Analyze with SonarCloud
       env:
         GITHUB_TOKEN: ${{ secrets.GIT_TOKEN }}
