--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
       
   docker-build-and-push:
     runs-on: ubuntu-latest
-    needs: [build, sonarcloud-analysis]
+    needs: build
     steps:
     - name: Check out repository
       uses: actions/checkout@v3
@@ -70,6 +70,10 @@ jobs:
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+    - name: Grant execute permission for mvnw
+      run: chmod +x mvnw
+      working-directory: ./quarkus_be
 
     - name: Build and Push Backend Docker Image
       run: |
