--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,6 +65,12 @@ jobs:
     - name: Check out repository
       uses: actions/checkout@v3
 
+    - name: Set up JDK 17
+      uses: actions/setup-java@v3
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+
     - name: Log in to Docker Hub
       uses: docker/login-action@v1
       with:
