--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,7 +58,7 @@ jobs:
       run: ./mvnw -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar -Dsonar.projectKey=Vzupa_zimskaSola24 -Dsonar.qualitygate.wait=false
       working-directory: ./quarkus_be
       
-  docker-build-and-push:
+  docker-build-and-push-be:
     runs-on: ubuntu-latest
     needs: build
     steps:
@@ -87,6 +87,19 @@ jobs:
         ./mvnw package
         docker build -f src/main/docker/Dockerfile.jvm -t vzupa/quarkus-be .
         docker push vzupa/quarkus-be
+
+  docker-build-and-push-fe:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+    - name: Check out repository
+      uses: actions/checkout@v3
+
+    - name: Log in to Docker Hub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
     - name: Build and Push Frontend Docker Image
       run: |
